# tree-sitter-htmlmustache

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  README.md  esbuild.config.mjs  eslint.config.mjs  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json  vitest.config.ts
.github/workflows/: ci.yml  lint.yml  lsp.yml  publish-npm.yml  publish-pypi.yml  release.yml
cli/src/: check.test.ts  check.ts
docs/adr/: 0001-attribute-schemas-and-tag-validators.md  0001-max-set-semantics-for-tag-schemas.md  0001-restructure-js-entry-points.md  0002-parent-and-child-tag-schemas-run-independently.md
js/: tsconfig.json
js/cli/: check.test.ts  check.ts  format.test.ts  format.ts  wasm.ts
js/formatter/: classifier.ts  document.ts  editorconfig.ts  embedded.ts  embeddedRegions.ts  formatter.test.ts  formatters.ts  index.ts  ir.ts  mergeOptions.ts  printer.ts  utils.ts
js/linter/: collectErrors.ts  customRuleFilter.ts  customTagSchemaChecker.ts  deprecationChecker.ts  htmlBalanceChecker.ts  index.ts  linter.test.ts  mustacheChecks.ts  selectorMatcher.ts  tagValidatorRunner.ts
js/parser/: index.ts  nodeTypes.generated.ts  parser.test.ts
js/shared/: configFile.ts  configSchema.ts  configSchemaJson.test.ts  cssDisplay.ts  customCodeTags.ts  customTagSchemaLoader.ts  nodeHelpers.ts  ruleMetadata.ts  tagValidatorHelpers.ts  (+3 more)
lsp/: README.md  package.json
schemas/: htmlmustache-config.schema.json
scripts/: generate-ast-types.ts  generate-config-schema.ts
src/: grammar.json  parser.c  scanner.c
(+41 files in other folders)
