[build-system]
requires = ["setuptools>=62.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-htmlmustache"
description = "HTML with Mustache/Handlebars template syntax grammar for tree-sitter"
version = "1.4.2"
keywords = ["incremental", "parsing", "tree-sitter", "html", "mustache", "handlebars"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Peter Stenger" },
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/prairielearn/tree-sitter-htmlmustache"
Issues = "https://github.com/prairielearn/tree-sitter-htmlmustache/issues"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
